config-root/namespaces/jx/harbor/templates/ingress/harbor-harbor-ingress-notary-ingress.yaml
# Source: harbor/templates/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: "harbor-harbor-ingress-notary"
  labels:
    heritage: Helm
    release: harbor
    chart: harbor
    app: "harbor"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    ingress.kubernetes.io/proxy-body-size: "0"
    ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  namespace: jx
spec:
  tls:
    - secretName: tls-dev-property-xyz-p
      hosts:
        - notary.dev.property.xyz
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: harbor-harbor-notary-server
              servicePort: 4443
      host: notary.dev.property.xyz
